--- a/www/home.html
+++ b/www/home.html
@@ -86,8 +86,8 @@
             <div class="flight_position" id="flight_position">
               <div class="row">
 
-                <div id="cam" class="cams col-md-6">
-                  Live Streaming :
+                <div class="cams col-md-6">
+                  <img id="bg" class="live" src="/fpv">
                 </div>
 
                 <div id="map" class="maps col-md-6">
