--- a/www/home.html
+++ b/www/home.html
@@ -87,7 +87,9 @@
               <div class="row">
 
                 <div class="cams col-md-6">
-                  <img id="bg" class="live" src="/fpv">
+                  <!--  <img id="bg" class="live" src="/fpv"> -->
+                  <img id="bg" class="live" src="/static/img/fpv.png">
+
                 </div>
 
                 <div id="map" class="maps col-md-6">
