--- a/www/home.html
+++ b/www/home.html
@@ -87,9 +87,14 @@
               <div class="row">
 
                 <div class="cams col-md-6">
-                  <!--  <img id="bg" class="live" src="/fpv"> -->
-                  <img id="bg" class="live" src="/static/img/fpv.png">
+                  <!--<img id="bg" class="live" src="/fpv">-->
+                  <!--  <img id="bg" class="live" src="/static/img/fpv.png">-->
+                  <div>
+                    <ul id="move" style=" list-style-type: none; ">
 
+                    </ul>
+
+                  </div>
                 </div>
 
                 <div id="map" class="maps col-md-6">
@@ -161,7 +166,10 @@
     <!-- FA -->
     <script src="/static/js/all.js"></script>
     <!-- Camera -->
-    <script src="/static/js/jquery.network-camera.js"></script>
-    <script src="/static/app/cam.js"></script>
+    <!--<script src="/static/js/jquery.network-camera.js"></script>-->
+    <!--<script src="/static/app/cam.js"></script>-->
+
+    <!-- Keyboard -->
+    <script src="/static/app/key.js"></script>
   </body>
 </html>
